--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<h1>Suicídio</h1>
+<p>O suicídio é o ato de tirar a própria vida e está relacionado com diversos fatores ambientais, socioculturais e existenciais, sendo os transtornos mentais o fator de risco mais importante para este ato, podendo incluir depressão e transtorno por uso de drogas e alcoolismo, por exemplo.
 
+Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
+<
+    p>O suicídio e um fenômeno complexo e multifatorial que pode afetar individuos de diferentes origens, faixas etárias, condições socioeconômicos, orientações sexuais e indentidades de gênero./p>
+<p>Em primeiro lugar está a depressão, seguida do transtorno bipolar e do abuso de substâncias.Com esses números, o suicídio encontra-se entre as três principais causas de morte em indivíduos com idade entre 15 e 29 anos no mundo.</p>
+<p></p>
