--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-
-
+<!DOCTYPE html>
+<html lang="pt-br">
+    <meta charset="UTF-8">
+    <title>Suicídio</title>
 <h1>Suicídio</h1>
 <p>O <strong>suicídio</strong> é o ato de tirar a própria vida e está relacionado com diversos fatores ambientais, socioculturais e existenciais, sendo os transtornos mentais o fator de risco mais importante para este ato, podendo incluir depressão e transtorno por uso de drogas e alcoolismo, por exemplo.</p>
 <p>Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
@@ -9,3 +11,4 @@
 <p>As principais medidas de prevenção, baseadas em evidências, incluem a restrição do acesso a meios para o suicídio (por exemplo, armas de fogo, pesticidas, etc.), políticas de saúde mental e de redução do consumo de álcool e promoção de reportagens na mídia ​​sobre o suicídio.</p>
 <p> <strong>Suicídio</strong> é um fenômeno complexo, multifacetado e de múltiplas determinações, que pode afetar indivíduos de diferentes origens, classes sociais, idades, orientações sexuais e identidades de gênero. Mas o suicídio pode ser prevenido! Saber reconhecer os sinais de alerta em si mesmo ou em alguém próximo a você pode ser o primeiro e mais importante passo.</p> 
 <p>Por isso, fique atento(a) se a pessoa demonstra comportamento suicida e procure ajudá-la.</p>
+</html>
