--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
          <title>Suicídio</title>
     </head>
     <body>
-    <h1>Suicídio</h1>
+
+    <h1 style="text-align:center;">Suicídio</h1>
    
     <p>O <strong>suicídio</strong> é o ato de tirar a própria vida e está relacionado com diversos fatores ambientais, socioculturais e existenciais, sendo os transtornos mentais o fator de risco mais importante para este ato, podendo incluir depressão e transtorno por uso de drogas e alcoolismo, por exemplo.</p>
     <p>Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
