--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
+    <head
+
+
          <meta charset="UTF-8">
          <title>Suicídio</title>
     </head>
@@ -9,12 +11,13 @@
     <h1 style="text-align:center;">Suicídio</h1>
    
     <p style="text-align:justify;">O <strong>suicídio</strong> é o ato de tirar a própria vida e está relacionado com diversos fatores ambientais, socioculturais e existenciais, sendo os transtornos mentais o fator de risco mais importante para este ato, podendo incluir depressão e transtorno por uso de drogas e alcoolismo, por exemplo.</p>
-    <p>Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
-    <p>O <strong>suicídio</strong> e um fenômeno complexo e multifatorial que pode afetar individuos de diferentes origens, faixas etárias, condições socioeconômicos, orientações sexuais e indentidades de gênero.</p>
-    <p>Em primeiro lugar está a depressão, seguida do transtorno bipolar e do abuso de substâncias. Com esses números, o suicídio encontra-se entre as três principais causas de morte em indivíduos com idade entre 15 e 29 anos no mundo.</p>
-    <p>Fatores de risco associados para o suicídio, como perda de emprego ou financeira, trauma ou abuso, transtornos mentais e de uso de substâncias e barreiras ao acesso a cuidados de saúde.</p>
-    <p>As principais medidas de prevenção, baseadas em evidências, incluem a restrição do acesso a meios para o suicídio (por exemplo, armas de fogo, pesticidas, etc.), políticas de saúde mental e de redução do consumo de álcool e promoção de reportagens na mídia ​​sobre o suicídio.</p>
-    <p> <strong>Suicídio</strong> é um fenômeno complexo, multifacetado e de múltiplas determinações, que pode afetar indivíduos de diferentes origens, classes sociais, idades, orientações sexuais e identidades de gênero. Mas o suicídio pode ser prevenido! Saber reconhecer os sinais de alerta em si mesmo ou em alguém próximo a você pode ser o primeiro e mais importante passo.</p> 
-    <p>Por isso, fique atento(a) se a pessoa demonstra comportamento suicida e procure ajudá-la.</p>
+    <p style="text-align:justify;">Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
+    <p style="text-align:justify;">O <strong>suicídio</strong> e um fenômeno complexo e multifatorial que pode afetar individuos de diferentes origens, faixas etárias, condições socioeconômicos, orientações sexuais e indentidades de gênero.</p>
+    <p style="text-align:justify;">Em primeiro lugar está a depressão, seguida do transtorno bipolar e do abuso de substâncias. Com esses números, o suicídio encontra-se entre as três principais causas de morte em indivíduos com idade entre 15 e 29 anos no mundo.</p>
+    <p style="text-align:justify;">Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>    >Fatores de risco associados para o suicídio, como perda de emprego ou financeira, trauma ou abuso, transtornos mentais e de uso de substâncias e barreiras ao acesso a cuidados de saúde.</p>
+    <p style="text-align:justify;">As principais medidas de prevenção, baseadas em evidências, incluem a restrição do acesso a meios para o suicídio (por exemplo, armas de fogo, pesticidas, etc.), políticas de saúde mental e de redução do consumo de álcool e promoção de reportagens na mídia ​​sobre o suicídio.</p>
+    <p style="text-align:justify;">Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
+    <p style="text-align:justify;"><strong>Suicídio</strong> é um fenômeno complexo, multifacetado e de múltiplas determinações, que pode afetar indivíduos de diferentes origens, classes sociais, idades, orientações sexuais e identidades de gênero. Mas o suicídio pode ser prevenido! Saber reconhecer os sinais de alerta em si mesmo ou em alguém próximo a você pode ser o primeiro e mais importante passo.</p> 
+    <p style="text-align:justify;"> Por isso, fique atento(a) se a pessoa demonstra comportamento suicida e procure ajudá-la.</p>
     </body>
 </html>
