--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <p style="text-align:justify;">As principais medidas de prevenção, baseadas em evidências, incluem a restrição do acesso a meios para o suicídio (por exemplo, armas de fogo, pesticidas, etc.), políticas de saúde mental e de redução do consumo de álcool e promoção de reportagens na mídia ​​sobre o suicídio.</p>
     <p style="text-align:justify;">Além disso, traumas emocionais, diagnósticos de doenças, problemas familiares e bullying, são outros fatores de risco que também estão relacionados com o pensamento suicida e o ato de suicídio.</p>
     <p style="text-align:justify;"><strong>Suicídio</strong> é um fenômeno complexo, multifacetado e de múltiplas determinações, que pode afetar indivíduos de diferentes origens, classes sociais, idades, orientações sexuais e identidades de gênero. Mas o suicídio pode ser prevenido! Saber reconhecer os sinais de alerta em si mesmo ou em alguém próximo a você pode ser o primeiro e mais importante passo.</p> 
-    <p style="text-align:justify;"> Por isso, fique atento(a) se a pessoa demonstra comportamento suicida e procure ajudá-la.</p>
+    <p style="text-align:center;"> Por isso, fique atento(a) se a pessoa demonstra comportamento suicida e procure ajudá-la.</p>
     </body>
 </html>
