--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p style="text-align:justify;">As principais medidas de prevenção, baseadas em evidências, incluem a restrição do acesso a meios para o suicídio (por exemplo, armas de fogo, pesticidas, etc.), políticas de saúde mental e de redução do consumo de álcool e promoção de reportagens na mídia ​​sobre o suicídio.</p>
     <p style="text-align:justify;"><strong>Suicídio</strong> é um fenômeno complexo, multifacetado e de múltiplas determinações, que pode afetar indivíduos de diferentes origens, classes sociais, idades, orientações sexuais e identidades de gênero. Mas o suicídio pode ser prevenido! Saber reconhecer os sinais de alerta em si mesmo ou em alguém próximo a você pode ser o primeiro e mais importante passo.</p> 
     <p style="text-align:center;">Por isso, fique atento(a) se a pessoa demonstra comportamento suicida e procure ajudá-la.</p>
-    </body>
+    <p style="text-align:right;">juliano cezar</p>
+</body>
 </html>
