--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
          <meta charset="UTF-8">
          <title>Suicídio</title>
     </head>
-    <body style="background:#cccccc;">
+    <body style="background:#6b0e0e;">
 
     <h1 style="text-align:center;color: rgb(0, 17, 255);">Suicídio</h1>
    
